Do not force the pure Go name resolver
Revert to Go's default mechanism that will decide between the `netgo`
pure-Go implementation and the `netcgo` cgo-based implementation depending
on OS and environment variables.

This allows, among other things, to use Prometheus to scrape mDNS targets.

Signed-off-by: Jan Fajerski <jfajerski@suse.com>
Signed-off-by: Johannes Kastl <git@johannes-kastl.de>

--- a/.promu.yml
+++ b/.promu.yml
@@ -12,12 +12,12 @@ build:
           path: ./cmd/promtool
     tags:
         all:
-            - netgo
             - builtinassets
             - stringlabels
         windows:
             - builtinassets
             - stringlabels
+    flags: -mod=vendor -a
     ldflags: |
         -X github.com/prometheus/common/version.Version={{.Version}}
         -X github.com/prometheus/common/version.Revision={{.Revision}}
